--- a/b6.html
+++ b/b6.html
@@ -21,8 +21,9 @@
                       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                           <a class="nav-link active" aria-current="page" href="#home-section">Home</a>
+                          <a class="nav-link active" aria-current="page" href="#registor-section">Registor</a>
                           <a class="nav-link active" aria-current="page"" href="#mentor-section">Mentors</a>
-                          <a class="nav-link active" aria-current="page"" href="#participate-section">participate</a>
+                          <a class="nav-link active" aria-current="page"" href="#">participate</a>
                         </div>
                       </div>
                     </div>
@@ -70,7 +71,7 @@
     </section>
 
 
-    <section class="pt-5" id="participate-section">
+    <section class="pt-5" id="registor-section">
       <div class="container bg-light" style="align-items: center;">
         <div class="row">
             <div class="col-sm-12 col-xl-12 pt-5">
